tdf#162062 only apply fix for tdf#161833 if there is a palette

Change-Id: I50d13ed336110eb5e65e99dd5d4a6c6defe6bc50
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170627
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit ee76e5041c79843ef0942c6427d4cd3717820ff6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170654
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>